--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,7 @@
-{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
+{
+    "rewrites": [
+      { "source": "/register/:uuid", "destination": "/register/:uuid" },
+      { "source": "/(.*)", "destination": "/" }
+    ]
+  }
+  
