--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsvectormap": "1.3.2",
     "jwt-decode": "^3.1.2",
     "nouislider-react": "^3.4.1",
+    "numeral": "^2.0.6",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-albus": "^2.0.0",
